# Wacom-Enabled-Mate

./: README.md
mate-control-center/: configure.ac
mate-control-center/capplets/: Makefile.am
mate-control-center/capplets/wacom/: Makefile  Makefile.am  Makefile.in  cc-wacom-mapping-panel.c  cc-wacom-page.c  cc-wacom-panel.c  cc-wacom-stylus-page.c  gsd-enums.h  gsd-input-helper.c  gsd-wacom-device.c  mate-wacom-pannel.desktop.in  mate-wacom-pannel.desktop.in.in  test-wacom.c  wacom.gresource.xml
mate-control-center/capplets/wacom/calibrator/: Makefile  Makefile.am  Makefile.am.20170131  Makefile.in  main.c
mate-control-center/capplets/wacom/calibrator/.deps/: calibrator.Plo
mate-settings-daemon/: configure.ac
mate-settings-daemon-1.16.0/: configure.ac
mate-settings-daemon-1.16.0/data/: Makefile.am  org.mate.peripherals-wacom.eraser.gschema.xml.in  org.mate.peripherals-wacom.stylus.gschema.xml.in  org.mate.peripherals-wacom.tablet-button.gschema.xml.in
mate-settings-daemon-1.16.0/plugins/wacom/: Makefile  Makefile.am  Makefile.in
mate-settings-daemon/data/: org.mate.peripherals-wacom.eraser.gschema.xml  org.mate.peripherals-wacom.gschema.xml  org.mate.peripherals-wacom.gschema.xml.in  org.mate.peripherals-wacom.stylus.gschema.xml  org.mate.peripherals-wacom.tablet-button.gschema.xml
mate-settings-daemon/plugins/: Makefile.am
mate-settings-daemon/plugins/mouse/: msd-mouse-manager.c
mate-settings-daemon/plugins/wacom/: Makefile  Makefile.am  Makefile.in  gsd-wacom-device.c  gsd-wacom-key-shortcut-button.h  gsd-wacom-led-helper.c  gsd-wacom-manager.c  gsd-wacom-oled-helper.c  gsd-wacom-osd-window.c  gsd-wacom-plugin.c  list-wacom.c  msd-wacom-button-editor.c  msd-wacom-button-editor.h  msd-wacom-device.c  msd-wacom-device.h  msd-wacom-key-shortcut-button.c  msd-wacom-led-helper.c  msd-wacom-manager.c  msd-wacom-manager.h  msd-wacom-oled-constants.h  msd-wacom-oled-helper.c  msd-wacom-oled.c  msd-wacom-oled.h  msd-wacom-osd-window.c  msd-wacom-osd-window.h  msd-wacom-plugin.c  org.gnome.settings-daemon.plugins.wacom.policy.in.in  test-osd-window.c  test-wacom.c  wacom.gnome-settings-plugin.in
