SUBDIRS = \
	common \
	accessibility \
	appearance \
	default-applications \
	display \
	keyboard \
	keybindings \
	mouse \
	network \
	wacom \
	windows \
        about-me

DIST_SUBDIRS = \
	common \
	accessibility \
	appearance \
	default-applications \
	keybindings \
	keyboard \
	mouse \
	network \
	wacom \
	windows \
	display \
	about-me

-include $(top_srcdir)/git.mk
